// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchButton icon with text should match snapshot 1`] = `
.c0 {
  margin: 0 8px 0 0;
}

<SearchButton>
  <IconButton
    icon={
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f002",
              "M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z",
            ],
            "iconName": "search",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    }
  >
    <Button>
      <WithStyles(WithStyles(ForwardRef(Button)))
        variant="contained"
      >
        <WithStyles(ForwardRef(Button))
          classes={
            Object {
              "colorInherit": "Button-colorInherit-23",
              "contained": "Button-contained-15",
              "containedNegative": "Button-containedNegative-19",
              "containedPositive": "Button-containedPositive-18",
              "containedPrimary": "Button-containedPrimary-16",
              "containedSecondary": "Button-containedSecondary-17",
              "containedSizeLarge": "Button-containedSizeLarge-29",
              "containedSizeSmall": "Button-containedSizeSmall-28",
              "containedWarning": "Button-containedWarning-20",
              "disabled": "Button-disabled-22",
              "endIcon": "Button-endIcon-34",
              "focusVisible": "Button-focusVisible-21",
              "fullWidth": "Button-fullWidth-32",
              "iconSizeLarge": "Button-iconSizeLarge-37",
              "iconSizeMedium": "Button-iconSizeMedium-36",
              "iconSizeSmall": "Button-iconSizeSmall-35",
              "label": "Button-label-2",
              "outlined": "Button-outlined-9",
              "outlinedNegative": "Button-outlinedNegative-13",
              "outlinedPositive": "Button-outlinedPositive-12",
              "outlinedPrimary": "Button-outlinedPrimary-10",
              "outlinedSecondary": "Button-outlinedSecondary-11",
              "outlinedSizeLarge": "Button-outlinedSizeLarge-27",
              "outlinedSizeSmall": "Button-outlinedSizeSmall-26",
              "outlinedWarning": "Button-outlinedWarning-14",
              "root": "Button-root-1",
              "sizeLarge": "Button-sizeLarge-31",
              "sizeSmall": "Button-sizeSmall-30",
              "startIcon": "Button-startIcon-33",
              "text": "Button-text-3",
              "textNegative": "Button-textNegative-7",
              "textPositive": "Button-textPositive-6",
              "textPrimary": "Button-textPrimary-4",
              "textSecondary": "Button-textSecondary-5",
              "textSizeLarge": "Button-textSizeLarge-25",
              "textSizeSmall": "Button-textSizeSmall-24",
              "textWarning": "Button-textWarning-8",
            }
          }
          variant="contained"
        >
          <ForwardRef(Button)
            classes={
              Object {
                "colorInherit": "MuiButton-colorInherit Button-colorInherit-23",
                "contained": "MuiButton-contained Button-contained-15",
                "containedNegative": "undefined Button-containedNegative-19",
                "containedPositive": "undefined Button-containedPositive-18",
                "containedPrimary": "MuiButton-containedPrimary Button-containedPrimary-16",
                "containedSecondary": "MuiButton-containedSecondary Button-containedSecondary-17",
                "containedSizeLarge": "MuiButton-containedSizeLarge Button-containedSizeLarge-29",
                "containedSizeSmall": "MuiButton-containedSizeSmall Button-containedSizeSmall-28",
                "containedWarning": "undefined Button-containedWarning-20",
                "disableElevation": "MuiButton-disableElevation",
                "disabled": "Mui-disabled Button-disabled-22",
                "endIcon": "MuiButton-endIcon Button-endIcon-34",
                "focusVisible": "Mui-focusVisible Button-focusVisible-21",
                "fullWidth": "MuiButton-fullWidth Button-fullWidth-32",
                "iconSizeLarge": "MuiButton-iconSizeLarge Button-iconSizeLarge-37",
                "iconSizeMedium": "MuiButton-iconSizeMedium Button-iconSizeMedium-36",
                "iconSizeSmall": "MuiButton-iconSizeSmall Button-iconSizeSmall-35",
                "label": "MuiButton-label Button-label-2",
                "outlined": "MuiButton-outlined Button-outlined-9",
                "outlinedNegative": "undefined Button-outlinedNegative-13",
                "outlinedPositive": "undefined Button-outlinedPositive-12",
                "outlinedPrimary": "MuiButton-outlinedPrimary Button-outlinedPrimary-10",
                "outlinedSecondary": "MuiButton-outlinedSecondary Button-outlinedSecondary-11",
                "outlinedSizeLarge": "MuiButton-outlinedSizeLarge Button-outlinedSizeLarge-27",
                "outlinedSizeSmall": "MuiButton-outlinedSizeSmall Button-outlinedSizeSmall-26",
                "outlinedWarning": "undefined Button-outlinedWarning-14",
                "root": "MuiButton-root Button-root-1",
                "sizeLarge": "MuiButton-sizeLarge Button-sizeLarge-31",
                "sizeSmall": "MuiButton-sizeSmall Button-sizeSmall-30",
                "startIcon": "MuiButton-startIcon Button-startIcon-33",
                "text": "MuiButton-text Button-text-3",
                "textNegative": "undefined Button-textNegative-7",
                "textPositive": "undefined Button-textPositive-6",
                "textPrimary": "MuiButton-textPrimary Button-textPrimary-4",
                "textSecondary": "MuiButton-textSecondary Button-textSecondary-5",
                "textSizeLarge": "MuiButton-textSizeLarge Button-textSizeLarge-25",
                "textSizeSmall": "MuiButton-textSizeSmall Button-textSizeSmall-24",
                "textWarning": "undefined Button-textWarning-8",
              }
            }
            variant="contained"
          >
            <WithStyles(ForwardRef(ButtonBase))
              className="MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
              component="button"
              disabled={false}
              focusRipple={true}
              focusVisibleClassName="Mui-focusVisible Button-focusVisible-21"
              type="button"
            >
              <ForwardRef(ButtonBase)
                className="MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
                classes={
                  Object {
                    "disabled": "Mui-disabled",
                    "focusVisible": "Mui-focusVisible",
                    "root": "MuiButtonBase-root",
                  }
                }
                component="button"
                disabled={false}
                focusRipple={true}
                focusVisibleClassName="Mui-focusVisible Button-focusVisible-21"
                type="button"
              >
                <button
                  className="MuiButtonBase-root MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
                  disabled={false}
                  onBlur={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label Button-label-2"
                  >
                    <IconButton__IconMarginRight>
                      <StyledComponent
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "IconButton__IconMarginRight-g9q5gl-0",
                              "isStatic": false,
                              "lastClassName": "c0",
                              "rules": Array [
                                "margin:0 8px 0 0;",
                              ],
                            },
                            "displayName": "IconButton__IconMarginRight",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "IconButton__IconMarginRight-g9q5gl-0",
                            "target": "span",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                      >
                        <span
                          className="c0"
                        >
                          <FontAwesomeIcon
                            border={false}
                            className=""
                            fixedWidth={false}
                            flip={null}
                            icon={
                              Object {
                                "icon": Array [
                                  512,
                                  512,
                                  Array [],
                                  "f002",
                                  "M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z",
                                ],
                                "iconName": "search",
                                "prefix": "far",
                              }
                            }
                            inverse={false}
                            listItem={false}
                            mask={null}
                            pull={null}
                            pulse={false}
                            rotation={null}
                            size={null}
                            spin={false}
                            swapOpacity={false}
                            symbol={false}
                            title=""
                            transform={null}
                          >
                            <svg
                              aria-hidden="true"
                              className="svg-inline--fa fa-search fa-w-16 "
                              data-icon="search"
                              data-prefix="far"
                              focusable="false"
                              role="img"
                              style={Object {}}
                              viewBox="0 0 512 512"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                                fill="currentColor"
                                style={Object {}}
                              />
                            </svg>
                          </FontAwesomeIcon>
                        </span>
                      </StyledComponent>
                    </IconButton__IconMarginRight>
                    Search
                  </span>
                  <WithStyles(memo)
                    center={false}
                  >
                    <ForwardRef(TouchRipple)
                      center={false}
                      classes={
                        Object {
                          "child": "MuiTouchRipple-child",
                          "childLeaving": "MuiTouchRipple-childLeaving",
                          "childPulsate": "MuiTouchRipple-childPulsate",
                          "ripple": "MuiTouchRipple-ripple",
                          "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                          "rippleVisible": "MuiTouchRipple-rippleVisible",
                          "root": "MuiTouchRipple-root",
                        }
                      }
                    >
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </ForwardRef(TouchRipple)>
                  </WithStyles(memo)>
                </button>
              </ForwardRef(ButtonBase)>
            </WithStyles(ForwardRef(ButtonBase))>
          </ForwardRef(Button)>
        </WithStyles(ForwardRef(Button))>
      </WithStyles(WithStyles(ForwardRef(Button)))>
    </Button>
  </IconButton>
</SearchButton>
`;

exports[`SearchButton icon without text should match snapshot 1`] = `
<SearchButton>
  <IconButton
    icon={
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              512,
              512,
              Array [],
              "f002",
              "M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z",
            ],
            "iconName": "search",
            "prefix": "far",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    }
  >
    <Button>
      <WithStyles(WithStyles(ForwardRef(Button)))
        variant="contained"
      >
        <WithStyles(ForwardRef(Button))
          classes={
            Object {
              "colorInherit": "Button-colorInherit-23",
              "contained": "Button-contained-15",
              "containedNegative": "Button-containedNegative-19",
              "containedPositive": "Button-containedPositive-18",
              "containedPrimary": "Button-containedPrimary-16",
              "containedSecondary": "Button-containedSecondary-17",
              "containedSizeLarge": "Button-containedSizeLarge-29",
              "containedSizeSmall": "Button-containedSizeSmall-28",
              "containedWarning": "Button-containedWarning-20",
              "disabled": "Button-disabled-22",
              "endIcon": "Button-endIcon-34",
              "focusVisible": "Button-focusVisible-21",
              "fullWidth": "Button-fullWidth-32",
              "iconSizeLarge": "Button-iconSizeLarge-37",
              "iconSizeMedium": "Button-iconSizeMedium-36",
              "iconSizeSmall": "Button-iconSizeSmall-35",
              "label": "Button-label-2",
              "outlined": "Button-outlined-9",
              "outlinedNegative": "Button-outlinedNegative-13",
              "outlinedPositive": "Button-outlinedPositive-12",
              "outlinedPrimary": "Button-outlinedPrimary-10",
              "outlinedSecondary": "Button-outlinedSecondary-11",
              "outlinedSizeLarge": "Button-outlinedSizeLarge-27",
              "outlinedSizeSmall": "Button-outlinedSizeSmall-26",
              "outlinedWarning": "Button-outlinedWarning-14",
              "root": "Button-root-1",
              "sizeLarge": "Button-sizeLarge-31",
              "sizeSmall": "Button-sizeSmall-30",
              "startIcon": "Button-startIcon-33",
              "text": "Button-text-3",
              "textNegative": "Button-textNegative-7",
              "textPositive": "Button-textPositive-6",
              "textPrimary": "Button-textPrimary-4",
              "textSecondary": "Button-textSecondary-5",
              "textSizeLarge": "Button-textSizeLarge-25",
              "textSizeSmall": "Button-textSizeSmall-24",
              "textWarning": "Button-textWarning-8",
            }
          }
          variant="contained"
        >
          <ForwardRef(Button)
            classes={
              Object {
                "colorInherit": "MuiButton-colorInherit Button-colorInherit-23",
                "contained": "MuiButton-contained Button-contained-15",
                "containedNegative": "undefined Button-containedNegative-19",
                "containedPositive": "undefined Button-containedPositive-18",
                "containedPrimary": "MuiButton-containedPrimary Button-containedPrimary-16",
                "containedSecondary": "MuiButton-containedSecondary Button-containedSecondary-17",
                "containedSizeLarge": "MuiButton-containedSizeLarge Button-containedSizeLarge-29",
                "containedSizeSmall": "MuiButton-containedSizeSmall Button-containedSizeSmall-28",
                "containedWarning": "undefined Button-containedWarning-20",
                "disableElevation": "MuiButton-disableElevation",
                "disabled": "Mui-disabled Button-disabled-22",
                "endIcon": "MuiButton-endIcon Button-endIcon-34",
                "focusVisible": "Mui-focusVisible Button-focusVisible-21",
                "fullWidth": "MuiButton-fullWidth Button-fullWidth-32",
                "iconSizeLarge": "MuiButton-iconSizeLarge Button-iconSizeLarge-37",
                "iconSizeMedium": "MuiButton-iconSizeMedium Button-iconSizeMedium-36",
                "iconSizeSmall": "MuiButton-iconSizeSmall Button-iconSizeSmall-35",
                "label": "MuiButton-label Button-label-2",
                "outlined": "MuiButton-outlined Button-outlined-9",
                "outlinedNegative": "undefined Button-outlinedNegative-13",
                "outlinedPositive": "undefined Button-outlinedPositive-12",
                "outlinedPrimary": "MuiButton-outlinedPrimary Button-outlinedPrimary-10",
                "outlinedSecondary": "MuiButton-outlinedSecondary Button-outlinedSecondary-11",
                "outlinedSizeLarge": "MuiButton-outlinedSizeLarge Button-outlinedSizeLarge-27",
                "outlinedSizeSmall": "MuiButton-outlinedSizeSmall Button-outlinedSizeSmall-26",
                "outlinedWarning": "undefined Button-outlinedWarning-14",
                "root": "MuiButton-root Button-root-1",
                "sizeLarge": "MuiButton-sizeLarge Button-sizeLarge-31",
                "sizeSmall": "MuiButton-sizeSmall Button-sizeSmall-30",
                "startIcon": "MuiButton-startIcon Button-startIcon-33",
                "text": "MuiButton-text Button-text-3",
                "textNegative": "undefined Button-textNegative-7",
                "textPositive": "undefined Button-textPositive-6",
                "textPrimary": "MuiButton-textPrimary Button-textPrimary-4",
                "textSecondary": "MuiButton-textSecondary Button-textSecondary-5",
                "textSizeLarge": "MuiButton-textSizeLarge Button-textSizeLarge-25",
                "textSizeSmall": "MuiButton-textSizeSmall Button-textSizeSmall-24",
                "textWarning": "undefined Button-textWarning-8",
              }
            }
            variant="contained"
          >
            <WithStyles(ForwardRef(ButtonBase))
              className="MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
              component="button"
              disabled={false}
              focusRipple={true}
              focusVisibleClassName="Mui-focusVisible Button-focusVisible-21"
              type="button"
            >
              <ForwardRef(ButtonBase)
                className="MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
                classes={
                  Object {
                    "disabled": "Mui-disabled",
                    "focusVisible": "Mui-focusVisible",
                    "root": "MuiButtonBase-root",
                  }
                }
                component="button"
                disabled={false}
                focusRipple={true}
                focusVisibleClassName="Mui-focusVisible Button-focusVisible-21"
                type="button"
              >
                <button
                  className="MuiButtonBase-root MuiButton-root Button-root-1 MuiButton-contained Button-contained-15"
                  disabled={false}
                  onBlur={[Function]}
                  onDragLeave={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  tabIndex={0}
                  type="button"
                >
                  <span
                    className="MuiButton-label Button-label-2"
                  >
                    <FontAwesomeIcon
                      border={false}
                      className=""
                      fixedWidth={false}
                      flip={null}
                      icon={
                        Object {
                          "icon": Array [
                            512,
                            512,
                            Array [],
                            "f002",
                            "M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z",
                          ],
                          "iconName": "search",
                          "prefix": "far",
                        }
                      }
                      inverse={false}
                      listItem={false}
                      mask={null}
                      pull={null}
                      pulse={false}
                      rotation={null}
                      size={null}
                      spin={false}
                      swapOpacity={false}
                      symbol={false}
                      title=""
                      transform={null}
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-search fa-w-16 "
                        data-icon="search"
                        data-prefix="far"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M508.5 468.9L387.1 347.5c-2.3-2.3-5.3-3.5-8.5-3.5h-13.2c31.5-36.5 50.6-84 50.6-136C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c52 0 99.5-19.1 136-50.6v13.2c0 3.2 1.3 6.2 3.5 8.5l121.4 121.4c4.7 4.7 12.3 4.7 17 0l22.6-22.6c4.7-4.7 4.7-12.3 0-17zM208 368c-88.4 0-160-71.6-160-160S119.6 48 208 48s160 71.6 160 160-71.6 160-160 160z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                    </FontAwesomeIcon>
                  </span>
                  <WithStyles(memo)
                    center={false}
                  >
                    <ForwardRef(TouchRipple)
                      center={false}
                      classes={
                        Object {
                          "child": "MuiTouchRipple-child",
                          "childLeaving": "MuiTouchRipple-childLeaving",
                          "childPulsate": "MuiTouchRipple-childPulsate",
                          "ripple": "MuiTouchRipple-ripple",
                          "ripplePulsate": "MuiTouchRipple-ripplePulsate",
                          "rippleVisible": "MuiTouchRipple-rippleVisible",
                          "root": "MuiTouchRipple-root",
                        }
                      }
                    >
                      <span
                        className="MuiTouchRipple-root"
                      >
                        <TransitionGroup
                          childFactory={[Function]}
                          component={null}
                          exit={true}
                        />
                      </span>
                    </ForwardRef(TouchRipple)>
                  </WithStyles(memo)>
                </button>
              </ForwardRef(ButtonBase)>
            </WithStyles(ForwardRef(ButtonBase))>
          </ForwardRef(Button)>
        </WithStyles(ForwardRef(Button))>
      </WithStyles(WithStyles(ForwardRef(Button)))>
    </Button>
  </IconButton>
</SearchButton>
`;
